--- a/README
+++ b/README
@@ -1,5 +1,9 @@
 All code in this repository is licenced under the MIT/X11 licence.
 
+Authors:
+Dimitri Krassovski <labria@startika.com>
+Oleg Sidorov <i4pcbr@gmail.com>
+
 Mac screencapture uploader
 
 Built using Rails 3.0.3 & MongoDB.
